--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok:1.18.26'
     implementation 'io.netty:netty-all:4.1.89.Final'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    implementation 'org.slf4j:slf4j-simple:2.0.5'
 }
 
 test {
